updated at: 2023-07-31 20:16, 魔女っこ衣装（サポート外） - Atreides System - BOOTH

--- a/VRChat/50/1058650.html
+++ b/VRChat/50/1058650.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Njz6oF1p/iRrSg3g8pQ/10XdDYFatM5Rr7ZOM9ZVF3w="></script>
+    "fWKoHEwnTHOBW2u411HlWvr9eCjsou+B/ZUenN2NfVw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔女っこ衣装（サポート外）","description":"VRChatアバターむけのオリジナルデザイン着せ替え衣装「魔女っこ衣装」です。\n当方作「狐児院のおんなのこ」向けに作っていますが、\n他のアバターでも使える着せ替え用データ入りです。\n\n☆内容物・仕様\nモデルのFBXファイル\nテクスチャのPSDファイル\n上記とアニメーションオーバーライドのファイルおよび自家製のシェーダを含めたユニティパッケージとなります。\n\n・kitsune_MH.fbx\n　「狐児院のおんなのこ」拡張用モデル全身分のfbxファイルです。\n　全身分のモデルデータが入ってますので各種設定を行うことでアバターとしても使用できます。\n　11863△ポリゴン\n\n・Majpofuku.fbx\n　上記モデルの「魔女っ子衣装」部分のみのfbxファイルです。\n　手と首を別オブジェクトにしてあるので必要部分を使ってください。\n　8868△ポリゴン\n\n・PotetoMasher.fbx\n　おまけのまじかるぽてとマッシャーのモデルデータです。\n\n・kitsune_MH.psd\n　上記モデル用のテクスチャファイルです。\n　髪の毛や服など色違いのものがレイヤー分けして入っているので必要部分を表示してPNGファイルに出力する等して使用てください。\n　標準で4カラーパターン入っています。\n　Unity上ではpsdのまま使用できます。\n　1024サイズでかなりコンパクトにまとめてあります。\n\n・KITSUNE_M_HW.unitypackage\n　「狐児院のおんなのこ」拡張用のユニティパッケージです。\n　こちらを導入することにより\n　顔:face_C\n　体:body_MF\n　髪型:hair_longC\n　アクセサリ:ribon_E\n　が追加となりますのでこちらを選択してください。\n　帽子のみ選択では装着できないため、\n　本体ボーンのheadの子にルートに追加されるプレハブのhatを入れてください。\n　また同様にルートに追加されるMPMはまじかるぽてとマッシャーの投擲用プレハブとなります。\n　こちらを持たせたいアバターモデル直下に入れ、\n　hand.Rとrigbodyとfixjointでつなぎ、\n　Animationフォルダ下に追加されるMPM・MPMTで表示・投擲が可能になります。\n　またこの衣装セットを使う場合テクスチャファイルを同梱のものにするか、\n　マテリアルを同梱のものに変更してください。\n\n・majofuku.unitypackage\n　汎用の「魔女っ子衣装」ユニティパッケージです。\n「狐児院のおんなのこ」以外のアバターで使う場合こちらを利用してください。\n　こちらを導入するとルートにMajofukuとMPMのプレハブと関連フォルダとファイルが追加になります。\n　/models下に追加されるmajofuku.fbxをアニメーションタイプhumanoidにしheadに任意の頭部を追加するか、\n　Majofukuのプレハブを調整し、導入したいモデルの対応するボーンの子に入れていく方式で着せ替えてください。\n\n\n2018/11/1 更新\n・majofuku_1.1.zip\n旧ファイルも残っていますがこちらのファイルのみで必要分が入っています。\n新規導入の場合こちらをご利用ください。\n更新内容：\nカラーバリエーション2色追加\nmajofuku.unitypackageのプレハブを使いやすいよう変更\n細かいメッシュの修正\n余分に入っていたファイルの削除\nすでに導入済みの場合\nkitsune_MH.fbx\nkitsune_MH.psd\nmajofuku.fbx\nを必要に応じて入れ替えてください。\n\n☆利用規約\nAtreidesSystem製3Dモデル共通規約\n\n〇本モデルを購入した時点で本利用規約に同意したものとします。\n本規約は内容を変更される場合があり、最新のものが適用されます。\n\n〇改変について。\n他の項目に反しない限り自由に行ってください\n部分的なパーツ取り等も構いません。\n\n〇本モデル、改変モデルをVRChat等モデルデータをアップロードし購入者のみがアバターとして利用できるサービスへの利用を許可します。\n\n\n〇本モデル、改変モデルの無断再配布、販売を禁止します。\n希望する場合あらかじめご相談ください\n\n〇本モデル、改変モデルをモデルデータとして取り出せない状態にして映像、ゲーム、アプリに組み込むことを許可します。\n収益化に関しては制限しません。またクレジットを記載する必要もありません。\n\n///2022年12月23日　追記項目\n〇本モデルを購入、あるいはギフトとして受け取った人同士で改変データを供給することを許可します。\nアバターモデルの場合その服のみ商品を含むものとします。\nただし、第三者が取得できてしまい状態にしないでください。また、金銭等トラブルが生じた場合責任持てません。\n\n〇公序良俗に反する行為や誹謗中傷行為目的に用いることを禁止します。\n\n〇本モデル、改造モデルを利用することによって生じたトラブル損失に関して一切責任を負わないものとします。\n\n〇翻訳等で差異が存在した場合日本語が優先されます。\n\n--------------------------------------------------------------------\n改定日　2022年12月23日　Boothのギフト機能に対しての改定\n制定日　2018年10月19日\n\n不明点ありましたらいかに連絡してください。\n\nTwitter: @AlbertAtreides\nDISCORD AlbertAtreides#5117","url":"https://booth.pm/ja/items/1058650","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/091e5aa4-67bb-479c-8d17-dd9330fc9eeb/i/1058650/09e21b8a-6c3d-4f26-a57d-0f6616cfdb1c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Njz6oF1p/iRrSg3g8pQ/10XdDYFatM5Rr7ZOM9ZVF3w="></script>
+    nonce="fWKoHEwnTHOBW2u411HlWvr9eCjsou+B/ZUenN2NfVw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -468,9 +468,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
