--- a/VRChat/67/1057167.html
+++ b/VRChat/67/1057167.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "aQ8BaSF51GgLEkB0pyBn1UxkfATyMhm4Fm/4XaBptb0="></script>
+    "ehSnn1yROoQI+d/tkSgzelreQ/eOW2mLs1V8/hi4A1o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【カラー６種類】なんかそれっぽい軍帽（リボン付き）　","description":"【※こちらの商品はサポート・更新終了しております】\n\n比較的シンプルめな軍帽だよ！\n個人的な趣味でリボンついてる版も同梱！\n\nポリゴン数\nリボン有　　△1344\nリボン無　　△ 960\n\nまんまるシェーダー1.3を想定してます。\n","url":"https://booth.pm/ja/items/1057167","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/38d12e48-b117-4086-a5c7-b02cd8f9c952/i/1057167/d2b88f80-8b16-434e-9c3b-93cbb918bcb1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aQ8BaSF51GgLEkB0pyBn1UxkfATyMhm4Fm/4XaBptb0="></script>
+    nonce="ehSnn1yROoQI+d/tkSgzelreQ/eOW2mLs1V8/hi4A1o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      686
+                                      687
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      686
+                                      687
                                     </div>
                                   </div></a>
                                 </div>
@@ -461,9 +461,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
