updated at: 2023-07-31 20:17, ハロウィンコスプレ北欧少女ソフィアちゃん - えるふ造園 - BOOTH

--- a/VRChat/88/1057188.html
+++ b/VRChat/88/1057188.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "DLZurnVxU4A17FrjLU68fN9Tkx2NhvwnP3SuuQ/d/1Q="></script>
+    "gLX6Ny7aY+FmG+QLR5RVlUYOjiRdBxlmhO1qtWvMceU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハロウィンコスプレ北欧少女ソフィアちゃん","description":"ハロウィンのために作ったモデルです。\nfbxファイルとUVテクスチャのpngファイルが入っています。\n\n・このモデルの著作権は制作者　ぐねし　が所有しています。\n・使用時の連絡や著作権表示は必要ありません。営利目的での利用も可能です。\n・改変可能です。ただし本モデルの制作者を騙ることはお止めください。\n・極めて暴力的な表現や他者を不快にさせる行為に用いるのはお止めください。\n・本モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません。\n\n連作先：Twitter　@guneC2136\n\n使用した―ってスクショ送ってくれると喜びます。","url":"https://booth.pm/ja/items/1057188","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/78867027-c2fc-4af9-900c-781924406908/i/1057188/301c79b3-4068-4d41-bd57-e6f0043fda6e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DLZurnVxU4A17FrjLU68fN9Tkx2NhvwnP3SuuQ/d/1Q="></script>
+    nonce="gLX6Ny7aY+FmG+QLR5RVlUYOjiRdBxlmhO1qtWvMceU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -344,9 +344,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
