--- a/VRChat/62/1057062.html
+++ b/VRChat/62/1057062.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eArXavn8N0Z5ZU9tiYNzJ3QEF6IUjN7BKOZmBcmeAMY="></script>
+    "r7WNIx145lIxXG566bBZG02oBIewClNX3xNHNligcSA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"剣向け汎用トレイル","description":"基本的には剣に埋め込むことを想定したトレイルです。\n\n大きさや位置などはヒエラルキーで親を弄ればすべて変更が出来ます。\n\nツリーの中にあるトレイルレンダラーを選択し、カラーを変更することで好みに合わせた色に変更することができます。\n多分、そのうちカラー変更の説明画像みたいなの同梱して上げなおすと思います。多分（強調）。\n\n規約とかは特にありません。\n\n追記：\n販売用の物品につけての再配布も可能です。\nその時は名前を記載してもらえればうれしいです。うん、作者がうれしいだけです。別につけなくてもいいです。\n\n2018/10/28\n五色＋白黒のトレイルを追加しました。\n全体的な発色を少しだけ良くしました。\nカラー変更及び規約のリードミーを追加しました。\n","url":"https://booth.pm/ja/items/1057062","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/370bd2d8-e720-4d70-a153-03e2d3872e42/i/1057062/20f5f486-81c0-4a8b-b71b-6a052bf0b50f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eArXavn8N0Z5ZU9tiYNzJ3QEF6IUjN7BKOZmBcmeAMY="></script>
+    nonce="r7WNIx145lIxXG566bBZG02oBIewClNX3xNHNligcSA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      455
+                                      454
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      455
+                                      454
                                     </div>
                                   </div></a>
                                 </div>
@@ -374,9 +374,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
