updated at: 2023-07-31 20:17, おまつりのつえ - AYWorks - BOOTH

--- a/VRChat/60/1057060.html
+++ b/VRChat/60/1057060.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jQvmUCBxkc2V9kVLeTgGnku4m33xvDacp7MpI1ShErU="></script>
+    "u0nLuUy5Ct//MvO4Wc5PPuAL4yB4pTG/bWCbQE1Zcwg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おまつりのつえ","description":"おまつりのつえ　V2.0\n\nかぼちゃのつえ△1660\nかねのつえ△2006\n\n■はじめに\n本データは藍華藍葉（以下製作者）の制作した3Dモデルデータです\nVRChatでアバターに被らせることを想定していますが、他の用途でもご利用いただけます\n\n\n■内容物\n[おまつりのつえV2.0]\n┃Readme.txt：このファイルです。初めにお読みください\n┃\n┣[かぼちゃのつえV1.0]\n┃KabochaRod.blend：blenderのプロジェクトデータ\n┃KabochaRod.fbx：FBXファイル\n┃KabochaRod.unitypackage：Unityのパッケージファイルです。マテリアルの設定がしてあります\n┃tEmission.png：エミッション用テクスチャです。ネコの目とカボチャの穴が光ります\n┃tKabochaRod.png：テクスチャ\n┃tKabochaRod_MnMr.png：まんまるしぇーだー用テクスチャ\n┃uKabochaRod.png：UV展開図です\n┃uKabochaRod.psd：テクスチャの元ファイルをpsdファイルに変換したもの\n┃uKabochaRod.sai2：テクスチャの元ファイル\n┃\n┗[かねのつえV1.0]\n　Albedo.png：テクスチャ\n　BellRod.blend：blenderのプロジェクトデータ\n　BellRod.fbx：FBXファイル\n　BellRod.UnityPackage：Unityのパッケージファイルです。マテリアルの設定がしてあります\n　Normal.png：ノーマルマップのテクスチャ\n　Smoothness.png：スムーズのテクスチャ\n　Standard_Culloff.shader：カリングオフのシェーダー\n　UV.png：UV展開図です\n\n\n■シェイプキーについて\n[共通]\n長さ変更用のシェイプキーが1種類付属しています\nベースのシェイプキーが短い場合、適宜調節してください\n\n\n■揺れ物用ボーンについて\n[共通]\nDynamicBoneは付属しておりませんので、適宜設定してください\n[かぼちゃのつえ]\nネコの羽とカボチャを揺らせるようにボーンが入っています\n[かねのつえ]\n鐘とハンマー部を揺らせるようにボーンが入っています\n\n\n■制作に使用したソフトウェア\nBlender 2.79b\nPaintTool SAI Ver.2 (64bit) Preview.2018.05.26\nAdobe Photoshop CS6\nSubstance Painter 2018\nUnity 5.6.3p1 Personal (64bit)\n\n\n■改変について\n自由です\nお知らせいただくと製作者が見て喜ぶと思います\n\n\n■商用利用について\n可能です\n\n\n■禁止事項\n2次配布および転載を禁じます\n\n\n■履歴\n2018/10/17　初版　V1.0\n2018/11/13　V2.0\n　・かねのつえ追加\n\n\n■問い合わせ先\nTwitter：@ay_c_\nPixiv：https://www.pixiv.net/member.php?id=146587\nDiscord：Carumba#2912\nVRChat：Carumba","url":"https://booth.pm/ja/items/1057060","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/60a161b7-c7bb-4fa2-8dc4-8ac298dd3e5f/i/1057060/fa8ebdb4-3b08-4afb-a6f4-b05550e2728e_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jQvmUCBxkc2V9kVLeTgGnku4m33xvDacp7MpI1ShErU="></script>
+    nonce="u0nLuUy5Ct//MvO4Wc5PPuAL4yB4pTG/bWCbQE1Zcwg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -526,9 +526,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
