--- a/VRChat/52/1055252.html
+++ b/VRChat/52/1055252.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zk1yAWFQEiU+V705xx0oKLaHR/GzBJV0StizLYPFJaE="></script>
+    "o0aSL4ZYF2fyLgxnx3xvhKSZ9DbBJykzBKbUBpm7QK8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種","description":"【更新履歴】\n2018/10/16　ver1.0 販売開始\n2018/10/17　ver1.1 ribbon_fの左右反転したリボンを追加しました\n2018/10/14　ver1.2 unitypackageとは別にfbxファイルを追加しました\n2022/0818　ver2.0.0 PhysBones対応　シェーダーをliltoonにしました。\n\n【商品説明】\nVRChatで使うことを想定したリボンのセットです。\nリボンそれぞれのテクスチャの他に汎用テクスチャも３枚用意してあります。\n組み合わせると２８種類のバリエーションが作れます。\n\nPhysBones設定済みなので揺れて触れます。\n事前にVRCSDK、liltoonをインポートしてください。\n\n【ファイル内容】\n・ribbons.unitypackage\n └・dataフォルダ\n └・generictexturesフォルダ\n └・texturesフォルダ\n └ ribbon_a.prefab\n └ ribbon_b.prefab\n └ ribbon_c.prefab\n └ ribbon_d.prefab\n └ ribbon_e.prefab\n └ ribbon_f.prefab\n └ ribbon_f_invert.prefab\n・fbxフォルダ\n └ ・textureフォルダ\n └ ribbon_a.fbx\n └ ribbon_b.fbx\n └ ribbon_c.fbx\n └ ribbon_d.fbx\n └ ribbon_e.fbx\n └ ribbon_f.fbx\n └ ribbon_f_invert.fbx\n\n\n【利用について】\n・この商品単体での再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。","url":"https://booth.pm/ja/items/1055252","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1055252/e5225bb7-1b08-49ca-b172-f8affe1619e2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zk1yAWFQEiU+V705xx0oKLaHR/GzBJV0StizLYPFJaE="></script>
+    nonce="o0aSL4ZYF2fyLgxnx3xvhKSZ9DbBJykzBKbUBpm7QK8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -691,9 +691,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
