--- a/VRChat/92/1055792.html
+++ b/VRChat/92/1055792.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9NDAIVNLXXX0fAwm8FB1Y1bIBYX1o3Y7WKbpb/uDQRM="></script>
+    "niitfFdhxEZ3yTzbTAfqDq4ite3NYPBHMHxg3aZlpv0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「banner spear」","description":"オリジナル3Dモデル「banner spear」紹介文および利用規約\n\n内容物(UnityPackage)：\n・banner spear.prefab　ポリゴン数：5628\nこのprefabをscene上に配置することによりclothとmaterialの設定が完了したものを設置できます。\n※旗については１枚の板ポリのため、通常の状態では裏面が表示されていません。\ncullingがされない各種shaderの使用をおすすめいたします。\n\n・banner spear.fbx\n・旗のマテリアル２種＋槍のマテリアル及び各テクスチャ\n\n使用者は配布モデルの利用に先立ち、当規約の内容全てに同意をした上で配布物を利用可能なものといたします。\nまた、本モデルデータを購入及びダウンロードをした時点で利用規約に同意したものとみなします。\n\n・再配布はしないこと\n・改造、改変は自由\n・商用利用可\n・未改造、改造問わず著作権はL'ermiteに帰属します\n・政治、宗教や特定の信条に関した活動に使わないこと\n・VRCでいう「○○Force」等に関する団体活動のロゴは旗に使用可\n・当データを利用した際のいかなる不利益や損害について、L'ermiteは一切の責任を負いません。\n\n上記で禁止した事項を行った場合、利用許諾は消えるものとし、違反者は著作権法で裁けるものとします。\n\nアフターサポートは行っておりませんので予めご了承ください。","url":"https://booth.pm/ja/items/1055792","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1055792/f184539b-a1eb-4c25-8447-a0bad8bcf6ff_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9NDAIVNLXXX0fAwm8FB1Y1bIBYX1o3Y7WKbpb/uDQRM="></script>
+    nonce="niitfFdhxEZ3yTzbTAfqDq4ite3NYPBHMHxg3aZlpv0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -469,9 +469,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
