--- a/VRChat/41/1055141.html
+++ b/VRChat/41/1055141.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "n0yIwvuNj7LZ0tHtZ4hZul8JUJrzAIZAC1Yo8RmgaoI="></script>
+    "IYxr/IzLJjDubbwnauIhnOFOOR5CL3MdJyQgOazGPzg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"風邪マスク (てくすちゃ3つ入り:64ポリ)","description":"概要:\n\nVRCHATでの利用を想定した風邪用マスクのFBXデータとUnityPackageです。\n季節の変わり目は体調を崩しやすいです、VR流行り風邪に気をつけましょう。\nかかりたくない人もかかってしまった人も、口元を隠したい人や無言勢である事を表したい人にもオススメです、もちろんケモノ、モンスターや機械の方にも。\n\n*画像内のマスク以外の物は付属しません\n*100円の方はブースト用です、付属するデータは無料のものと同じです。\n\n情報:\n\nポリゴン数 : 64\nテクスチャサイズ : 255x127\n配布形式 : UnityPackage形式, FBX形式\n\n\n利用規約:\n\n・データの改変は自由にどうぞ。\n・改変前後を問わず、再配布や再販売は禁止です。\n・この商品に含まれる全てのデータの権利は配布元に帰属します。\n・更に詳しい規約については付属のReadMeをご覧ください。","url":"https://booth.pm/ja/items/1055141","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/33c82016-ad16-4f5d-a7de-e2f3c8dd4f4d/i/1055141/47bef6db-d835-457e-841b-f5dfa3951013_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n0yIwvuNj7LZ0tHtZ4hZul8JUJrzAIZAC1Yo8RmgaoI="></script>
+    nonce="IYxr/IzLJjDubbwnauIhnOFOOR5CL3MdJyQgOazGPzg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -454,9 +454,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
