--- a/VRChat/01/1055101.html
+++ b/VRChat/01/1055101.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nXnwmFopABWoDjYYfsOxnj9qOt2tJZ8EgPbCoIUjIWU="></script>
+    "cFGEYMh7HPSZ1Std0qiPufg2KCjnXj8dOrCxYPwRiJo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ぷるぷるプリン","description":"ぷるぷるするプリンの3Dモデルです。\nVRChatのアバターの頭に髪飾りとして付けるために作成しました。\n改変、商用等、自由にご利用いただけます。\n\n2018/10/17\nお皿からMesh Colliderを削除","url":"https://booth.pm/ja/items/1055101","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1055101/631dc4c7-e5ab-4c4b-a1d2-5d8eb1bdeb4e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nXnwmFopABWoDjYYfsOxnj9qOt2tJZ8EgPbCoIUjIWU="></script>
+    nonce="cFGEYMh7HPSZ1Std0qiPufg2KCjnXj8dOrCxYPwRiJo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -356,9 +356,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
