--- a/VRChat/26/1054926.html
+++ b/VRChat/26/1054926.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JTN0OTQZWrubJOy71ejQEJ+m58cVzWTen0XmMQcALXY="></script>
+    "5IouTo8b0d1gSjSI+uq2OnBRNHYhANlq5EhMqhgtVCk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カボチャのカゴ【VRChat向け】","description":"ハロウィンのためのカボチャのかごです\nサブスタもなく、自分のアバター用に作っていたのでポリゴンが多く色々雑です...\n\nー製品内容ー\nFBXデータ(ポリゴン数818)\nテクスチャデータ(png)\n\n以下規約に従った上で、ご自由にお使いください！\n改変、商用利用は可です！\n\nー利用規約ー\n当データの著作権は製作者である白亜重工(白雪)に帰属します\n●禁止事項\n当データ(改変した場合も含む)の再配布、転載\n●免責事項\n当データを使用して発生したトラブルに一切の責任を製作者は負いません\nご利用は自己責任でお願いします\n","url":"https://booth.pm/ja/items/1054926","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1054926/754b3bc3-fe1a-4be4-8828-14029985a15c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JTN0OTQZWrubJOy71ejQEJ+m58cVzWTen0XmMQcALXY="></script>
+    nonce="5IouTo8b0d1gSjSI+uq2OnBRNHYhANlq5EhMqhgtVCk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -389,9 +389,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
