--- a/VRChat/92/1054992.html
+++ b/VRChat/92/1054992.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "L7h3JvMxkVSKzT2CpmTqZPz7Q5LeE4wH/ICDJg7Xex4="></script>
+    "sEkpxQNe08OgOzq+oPibLUW5TSa5quH1sS86Lpex1zY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔女帽子【VRChat向け】","description":"ハロウィンのための魔女の帽子です\nサブスタもなく、自分のアバター用に作っていたのでポリゴンが多く色々雑です...\nサンプル画像のほうはいろいろ改造してしまってます\n\nー製品内容ー\nFBXデータ(ポリゴン数686)\nテクスチャデータ(png)\n\n帽子の先のほうにボーンが入っているのでダイナミックボーン等で揺らすことができます\n以下規約に従った上で、ご自由にお使いください！\n改変、商用利用は可です！\n\nー利用規約ー\n当データの著作権は製作者である白亜重工(白雪)に帰属します\n●禁止事項\n当データ(改変した場合も含む)の再配布、転載\n●免責事項\n当データを使用して発生したトラブルに一切の責任を製作者は負いません\nご利用は自己責任でお願いします","url":"https://booth.pm/ja/items/1054992","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1054992/5833f52a-5e01-4803-a61f-909f6245ed67_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="L7h3JvMxkVSKzT2CpmTqZPz7Q5LeE4wH/ICDJg7Xex4="></script>
+    nonce="sEkpxQNe08OgOzq+oPibLUW5TSa5quH1sS86Lpex1zY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -389,9 +389,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
