updated at: 2023-07-31 20:20, Laurel Crown - 憂人本家 - BOOTH

--- a/VRChat/62/1386462.html
+++ b/VRChat/62/1386462.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6pYVjXSm3Ak8bZd/J/Y44NSt7EkTlllrcLWqQba7bpc="></script>
+    "rD5TAjYCQH2QsezJJN5W10Vs8uIb3pCVSMPbpN9yRGc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Laurel Crown","description":"-特徴-\n月桂樹の草冠と星の装飾のモデルデス\n草冠と装飾でマテリアルは分けていますデス\n草冠は片面ポリゴンのため両面表示出来るシェーダー推奨デス\n草冠のUV展開はあえてバラバラにしていますデス\nポリゴン数　△１０８６\n製作時Unityバージョン　2018.4.20f1\n\n-更新履歴-\n2020年12月19日\nUnityパッケージ化\n データ内の日本語文字を英語文字に修正\n メッシュの大きさを修正\n メッシュデータを1つにまとめる修正\n\t(星を消して使用したい場合はNonStarsマテリアルを星部分へ使用してもらえればと思います)\n\n-内容物-\n・Laurel Crown.fbx\n・Laurel Crown.unitypackage\n・Laurel Crown_UV.png\n・更新履歴.txt\n\n-利用規約-\n当モデルは、憂人本家が作成した3Dオブジェクトデス\n当モデルデータの利用者はモデルデータの利用をもって本利用規約に同意したものとみなしますデス\n\nVRChatやUnity製作物やMMD等での利用が可能デス\n改変やペデスタル等での二次配布や商用利用が可能デス\n\n再販や悪意のある利用はしないで下さいデス\n\n利用規約はダウンロード時点での情報ではなく最新の情報が優先されますデス\n当モデルで生じたいかなる損害やトラブルに対して憂人本家は一切責任を負いませんデス\n日本国の著作権法に保護された著作物であることをご留意くださいデス","url":"https://booth.pm/ja/items/1386462","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b38e460c-5ac5-4c59-aaae-e30f1fceea3a/i/1386462/7174ea12-a7b8-4741-a567-e6e20eca7ea5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6pYVjXSm3Ak8bZd/J/Y44NSt7EkTlllrcLWqQba7bpc="></script>
+    nonce="rD5TAjYCQH2QsezJJN5W10Vs8uIb3pCVSMPbpN9yRGc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -472,9 +472,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
