updated at: 2023-07-31 20:22, For VR SilentChatSystem - yukito&#39;s Labo - BOOTH

--- a/VRChat/58/1385658.html
+++ b/VRChat/58/1385658.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yvsHQimQFsG+T6lvhJihPOapbEUKmDntN0jVy7X1KMI="></script>
+    "9vMMGOMBn4KPvyqreEmzNE1malQnk73RmOGSPScVNGU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"For VR SilentChatSystem","description":"HMDユーザー向けの無言勢サポートアイテムです。\n左右のコントローラーから選択して、任意のコメントを表示できます。\n画像では分かりにくいですが、選択中の文字が少し外側に動き、今表示されている文字が何なのか分かるようになっています。\nread me を必ずお読みください。\n\n☆oculus対応しました（v0.2）\n★エモートスイッチ対応しました（v1.0）\n\n前提として\n・arktoon-shaders\n・VRC SDK\nが必要となります。\n\n改変等はご自由に。\n\n禁止事項\n・自作、またはそれに準ずる発言\n・誹謗中傷に値するコメントの登録、及び使用\n\n2019/5/25　配布開始\n2019/5/27　oculus対応\n2019/5/29　エモートスイッチ対応","url":"https://booth.pm/ja/items/1385658","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/76a3e57f-f920-4e81-9718-52178f739ef9/i/1385658/1b5ddc97-792a-427d-9875-0cec977b5e2c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yvsHQimQFsG+T6lvhJihPOapbEUKmDntN0jVy7X1KMI="></script>
+    nonce="9vMMGOMBn4KPvyqreEmzNE1malQnk73RmOGSPScVNGU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -406,9 +406,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
