updated at: 2023-07-31 20:24, 【MMD】【Unity】リアルサメモデル - ショップByNEET - BOOTH

--- a/VRChat/54/1384654.html
+++ b/VRChat/54/1384654.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PyynHMmqDrIzknJjb+hEfCEn6sYbDUR1N50sNPrsWSQ="></script>
+    "fZ+rowGndmBhetkA48wXXzhv8v4m+Vp5rJtvp2pEsrE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【MMD】【Unity】リアルサメモデル","description":"自分用として作ったサメですが、\nMMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。\n\n\n\n◆形式\n・MMD用のPMXファイル、\n・Unity用のFBXファイル、\n・VRChat用のUnityパッケージ、\n・メタセコイア用のMQOZファイル\nが入っています。\nボーン形式はHumanoid形式です。\n\nそのままMMDで踊れるしVRCでも使えます。\n\n（不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です）\n\n\n\n◆テクスチャ\n４Kの解像度のテクスチャとノーマルマップと、\n透明マップが入っています。\n\nこのサメモデルのヒレにはアルファ抜きの要素もあって、\n細かい「切れ込み」の傷なんかも表現しています。（６枚目の画像）\n\nそれはテクスチャ自身の透明要素によって表示していますが、\nこれが使えない環境のことも考えて、「明暗でアルファを抜く用の白黒の画像」も入っています。\n\nhttps://byneet.fanbox.cc/posts/3093307\nMMDモデルにノーマルマップを適用する方法についてはここを参考にしてください\n\n\n◆ポリゴン数\n４角ポリゴンで７６００ポリゴン程です。\n\n\n\n◆モーフ\n・歯茎をムキ出すモーフ\n・歯茎をすぼめるモーフ\n\n・エラを開くモーフ\n・エラを閉じるモーフ\n\n・歯の角度を曲げるモーフ（口を閉じる時のため）\n・ちょっと睨むモーフ（本来そんなの無いですが）\n\nなどが用意されています。\n\n顎の関節を２重構造にしたり、\nホホにもボーンを入れているので、\nかなり口をガバっと開くことができます。\n\n\n\n◆このサメについて\n\n基本的にホオジロザメを意識しているサメですが、\nデザイン的に１００％ホオジロザメでは無かったりします。\n\n尻ビレと脂ビレなどにアレンジがあって、ちょっと大きめにしてたりします。\n\n\n\n◆利用規約\n勝手に再配布以外の行為なら、ゲーム利用、動画利用、\n何をしてくれても多分オッケーです。\n\n（例えばVRCに、モデルをプライベートでアップロードして個人的に楽しむのはOKですが、パブリックでアップロードするのとかはNGです）\n\n\n何か問題があったら教えてください。","url":"https://booth.pm/ja/items/1384654","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/9b436d1b-ecc9-44b3-a4c7-a14f856c56f0/i/1384654/46b95d58-4523-4770-9fc6-543c65f78faa_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PyynHMmqDrIzknJjb+hEfCEn6sYbDUR1N50sNPrsWSQ="></script>
+    nonce="fZ+rowGndmBhetkA48wXXzhv8v4m+Vp5rJtvp2pEsrE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -572,9 +572,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
