updated at: 2023-07-31 20:24, よくある瓶（marucola_bottle） - マルコウ電脳百貨店 - BOOTH

--- a/VRChat/34/1384534.html
+++ b/VRChat/34/1384534.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zFs3D8jYCM+HHTHz6naWZ8C+7Z1S3+ncOiQT2mHJwCM="></script>
+    "Cbm6A5n7huc584LjHd/TpnCLWrzC8kFXzzomhkcBRe4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"よくある瓶（marucola_bottle）","description":"\n\nVRChat向け3Dモデル「よくある瓶（marucola_bottle）」\n\n制作者　マルコウ\n\n\n――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――\n\n・本モデルはVRChat向けに制作した3Dモデルです。\n\n\n・利用規約を記載しています。ご了承の上ご購入下さい。\n  ※DLの時点で規約に同意したものといたします。\n\n――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――\n\n【内容物】\n\nmarucola_bottle.unitypackage\n\nread me .txt\n\n\n\n\n【利用規約】\n\n・本モデルの著作権は、制作者　マルコウに帰属します。\n\n・改変後のデータの著作権も同様です。また、改変後のデータにも本規約は適用されます。\n\n・本規約は予告なく変更される場合があります。その際は最新のものが適用されます。\n\n・R-18、R-18Gの表現は可です。法律、及び各サービスの規約に従い、自己責任の下ご利用下さい。\n\n・動画や生放送、Vtuberとしてのキャラクターの利用、また、他者の配信、動画への映り込み・出演に関して、収益化の有無に関わらず全て許可致します。クレジット表記も不要です。\n\n・本モデルをご利用した事で発生した如何なるトラブル、損害等に関して、制作者マルコウは責任を負いません。\n\n・本データは予告なくアップデート、販売の停止をする場合があります\n\n【免責事項】\n\n・本モデルをご利用した事で発生した如何なるトラブル、損害等に関して、制作者マルコウは責任を負いません。\n\n【禁止事項】\n\n・再配布（VRChatのワールドに組み込む・VRCのペデスタル等は許可）\n\n・製作者以外の再販売\n\n・政治的、差別的な用途への利用。\n\n\n\n規約制定日 2019/05/24\n\n\n質問等がございましたら下記の連絡先にご連絡ください。\n\n\n連絡先\nTwitter：marukou1104","url":"https://booth.pm/ja/items/1384534","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b997a55a-4689-4635-9a6a-044249ad8a76/i/1384534/5f25b7e2-88ed-409a-a3b9-5bbcc62ecd7c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zFs3D8jYCM+HHTHz6naWZ8C+7Z1S3+ncOiQT2mHJwCM="></script>
+    nonce="Cbm6A5n7huc584LjHd/TpnCLWrzC8kFXzzomhkcBRe4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -520,9 +520,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
