updated at: 2023-07-31 20:24, Unityで使えるドット絵爆発パーティクル - 鮪府Industries - BOOTH

--- a/VRChat/43/1384243.html
+++ b/VRChat/43/1384243.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lGlI/6j2lUQ/I7T4oVvyDjaRmpbXGONYjHS00rBqhaA="></script>
+    "RfTm8wtZVCTwb0iftbU9yddbxOGgHCEbeQXg1X6g++E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Unityで使えるドット絵爆発パーティクル","description":"ドット絵の爆発パーティクルです。要望があったので売ります。\n(pedro氏のチュートリアルを見ながら作っています)\nUnitypackageになっており、入れればすぐShurikenで大暴れしてくれます。迷惑にならない程度にお楽しみください。\n\nなんかこれだけだとアレなので、1000円払うと爆発パーティクルの元データが手に入るようにしときました。僕の励みになります。\n\n↓に実際の爆発がどう見えるかのgifがあります\nhttps://twitter.com/maguro0302/status/1131576413776072705","url":"https://booth.pm/ja/items/1384243","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/f215380d-1931-4039-9529-a102e7243a1f/i/1384243/ead2e146-d487-4138-be96-ee1c43011621_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lGlI/6j2lUQ/I7T4oVvyDjaRmpbXGONYjHS00rBqhaA="></script>
+    nonce="RfTm8wtZVCTwb0iftbU9yddbxOGgHCEbeQXg1X6g++E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -571,9 +571,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
