updated at: 2023-07-31 20:28, 【無料】３D小物・「本」 - クロウリーの雑貨屋 - BOOTH

--- a/VRChat/35/1047835.html
+++ b/VRChat/35/1047835.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9JKTpCukEDXVksCG35VuTUiubvroIDgezzGysFxpiFI="></script>
+    "LVM7fB8SUO4rJazfbqjvHCFQ17nEw0DyburAH9rH5Cc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】３D小物・「本」","description":"FBXの、ハードカバー本のデータです。\n3Dゲーム内でのステージ上の小物等にお使いください。\n\nまた、マテリアルを変えることで内容を別のものにできるので、それを利用した疑似ページ送りなどもできるはずです。\n\nサンプルのテクスチャを自由にいじって、あなただけの本を作ってみましょう。\n\n著作権は完全にした状態で提供（CC0）しますので、お好きなようにお使いください。","url":"https://booth.pm/ja/items/1047835","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8c1f91da-4c5a-427e-94f8-06989826b2ac/i/1047835/cc29ac19-68f5-4f36-9d12-ed9a27995e13_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9JKTpCukEDXVksCG35VuTUiubvroIDgezzGysFxpiFI="></script>
+    nonce="LVM7fB8SUO4rJazfbqjvHCFQ17nEw0DyburAH9rH5Cc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -427,9 +427,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
