updated at: 2023-07-31 20:31, さんりんしゃ（VRChat向け3Dモデル） - しめさば水産 - BOOTH

--- a/VRChat/97/1039997.html
+++ b/VRChat/97/1039997.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "e5DaKigAtjgFXVXIAecb+i+6CGrW3bvSm9KHQxNySbA="></script>
+    "sd8Gg1566j+2HHeLekxpuedy+b8+95SlEoEGAOdrF1M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"さんりんしゃ（VRChat向け3Dモデル）","description":"更新履歴：\n(2018/10/09)フォルダの階層とマテリアル名を修正しました。\n\n\n◆概要\n\nちいさくて、かわいい子……多いですよね？なら！三輪車！！！\n\n制作：みこさく\n\n\n\n\n◆使い方\n\nワールドへの設置や、アバターアニメーションなどで使っていただけたらと思います。\nかわいい子、かっこいい子、よくわからない子が三輪車にまたがる姿をSSに収めましょう！！\n\nまたタイヤなど可動可能な部分がありますが、アニメーションは各自で設定を行ってください。\n\n\n◆内容\n\n▽さんりんしゃ.unitypackage\n└さんりんしゃ.fbx(△7744)\n└さんりんしゃ.png\n└マテリアルなど\n※ファイル名は上記とは異なります。\n\n▽注意.txt\n\n\n◆利用・改変等に関して\n\n本モデルはVRChatでの使用を主な目的として制作しています。\n配信及び映像作品、その他プラットフォームでの利用も自由です。\nテクスチャの変更やモデルの改変等も可能です。\n詳しくは「README.txt」を参照し、それでもわからない場合は問い合わせしてください。\n\n\n◆著作権・制限事項・免責事項などの難しいところ\n\n本データの自作発言、他者への二次配布、パブリックワールド設置アバターへの使用を禁止します。\n本データの著作権は、しめさば水産に帰属します。\n本データを使用して発生した、いかなる損害・損失・その他不利益等には、当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/1039997","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/35e9b140-14bb-4adb-90ad-592d067cee32/i/1039997/ec2d8c49-55d8-4b08-a5aa-5d4198087f0f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="e5DaKigAtjgFXVXIAecb+i+6CGrW3bvSm9KHQxNySbA="></script>
+    nonce="sd8Gg1566j+2HHeLekxpuedy+b8+95SlEoEGAOdrF1M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -388,9 +388,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
