updated at: 2023-07-31 20:35, fbxモデル 日本刀｢雪透｣ ver2.0 - Store*Snowlight - BOOTH

--- a/VRChat/38/1037538.html
+++ b/VRChat/38/1037538.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "iIizccfDPcSfBzwbmRhpzH5z9ef52+y1uZYyBIBEurw="></script>
+    "z61yLxLm4f/Pzwi6v2AScYNNjkf/3l3IirOBoDcmA8M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"fbxモデル 日本刀｢雪透｣ ver2.0","description":"English explanation is at the bottom of this page.\n\n本製品は、fbx形式の3D武器モデルです。\nUnityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。\n\n「ゆきとおし」と読みます。\n付属のトレイルレンダラーは以下の動画のようになっております。\n\n---\n新日本刀モデル「細雪(ささめゆき)」も是非ご覧ください。\n\nfbxモデル 日本刀｢細雪｣ | Store*Snowlight\nhttps://snowlight0102.booth.pm/items/2251603","url":"https://booth.pm/ja/items/1037538","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/1037538/031a84ed-3bfa-407e-8988-b7d6709c3c2e_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iIizccfDPcSfBzwbmRhpzH5z9ef52+y1uZYyBIBEurw="></script>
+    nonce="z61yLxLm4f/Pzwi6v2AScYNNjkf/3l3IirOBoDcmA8M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -691,9 +691,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
