updated at: 2023-07-31 20:36, 武器/装備セット3 - だんけわーくす - BOOTH

--- a/VRChat/01/1037001.html
+++ b/VRChat/01/1037001.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "A2FYovX5LDre9JQOV5EAW+cAEDcWcWDAIjeaiPteJ2k="></script>
+    "l+6Ee70K00A5hoWB/uI99JNFjiafDWrANkCgfEkULj0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"武器/装備セット3","description":"■VRChat向けの武器セット第3弾\n・CIWS-01C(近接戦闘用高周波ブレード)\n　CIWS-01Aを改良、取り回しを重視した小型ブレード\n　鞘は展開可能。連結ジョイントが同梱されており、他の高周波ブレードの鞘と連結できます\n\n・PDW Mark1\nケースレス弾を採用したサブマシンガン。\n\n・サブアーム・ユニット\n単腕バージョンの武装懸架アーム。一部の関節はスイング機構で伸縮できます\n\n・ブースター・ユニット\n偏向ノズル(ボーンで可動します)方式のブースター。\n\n・汎用装甲4種：アバターの手足に装備することを想定したアーマーパーツ第2弾\n\n　UTS2.0対応(Packageを使用する際は予めUTS2.0を入れてください) Packageを導入することでマテリアル設定済になったものが取り込めます\n\n■ポリゴン数\n　CIWS-01C(小型高周波ブレード)：590\n　CIWS-01C(鞘)：563\n　PDW Mark1(個人防衛火器):2,792\n\n　ブースター・ユニット2：600\n　ブースター・ユニット3：380\n\n　武装連結パーツ：608\n　サブアーム・ユニット：778\n\n　装甲4：320\n　装甲5：200\n　装甲6：184\n　装甲7：336\n　(ポリゴン数が多いためAnimation Overrideでの表示を推奨します)\n\n■禁止事項：再配布、自作発言","url":"https://booth.pm/ja/items/1037001","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/1037001/aaab6422-22cb-415d-a45a-b29d262d4b8c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="A2FYovX5LDre9JQOV5EAW+cAEDcWcWDAIjeaiPteJ2k="></script>
+    nonce="l+6Ee70K00A5hoWB/uI99JNFjiafDWrANkCgfEkULj0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -403,9 +403,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
